# esp32p4-wifi-rtlsdr

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
c6-ota-flasher/: CMakeLists.txt  sdkconfig.defaults
components/decoders/: CMakeLists.txt  decoder_adsb.c  decoder_ais.c  decoder_aprs.c  decoder_ax25.c  decoder_bus.c  decoder_channel.c  decoder_ctcss.c  decoder_cw.c  decoder_dtmf.c  decoder_ft8.c  decoder_gsm.c  decoder_pocsag.c  decoder_registry.c  decoder_tracking.c  dsp_ddc.c
components/decoders/include/: decoder_common.h  decoder_framework.h  dsp_ddc.h
components/usb_audio/: CMakeLists.txt  Kconfig  idf_component.yml  tusb_config.h  usb_audio.c
components/usb_audio/include/: usb_audio.h
components/websdr/: CMakeLists.txt  websdr.c
components/websdr/certs/: prvtkey.pem  servercert.pem
components/websdr/include/: websdr.h
components/websdr/www/: fm_player.html  index.html  sdr.css  sdr.js
components/wifimgr/: CMakeLists.txt  Kconfig  idf_component.yml  wifimgr.c  wifimgr_api.c  wifimgr_chatbot.c  wifimgr_config.c  wifimgr_ethernet.c  wifimgr_notify.c  wifimgr_ota.c  wifimgr_portal.c
components/wifimgr/include/: wifimgr.h  wifimgr_api.h  wifimgr_chatbot.h  wifimgr_config.h  wifimgr_notify.h  wifimgr_portal.h
components/wifimgr/www/: portal.css  portal.html  portal.js
docs/: 2026-03-24-comprehensive-fix-report.md  ARCHITECTURE.md  BENCHMARKS.md  BUGS_AND_FIXES.md  DEVELOPMENT_LOG.md  DRIVER_ANALYSIS.md  ESP32_P4_PIE_SIMD_GUIDE.md  FEASIBILITY.md  FM_RADIO_CPU_ALLOCATION.txt  FM_RADIO_DATA_FLOW.txt  HARDWARE_SETUP.md  PIE_CHANNEL_DECODE_DESIGN.md  POWER_BUDGET.md  PROTOCOL_COMPARISON.md  SAMPLE_RATE_BENCHMARKS.md  SIGNAL_PATH.txt  TODO.md  WEBSDR_ANALYSIS.md  codex-fixes.md  gemini-websdr-review.md  gsm-decode-status.md  lte-scanner-research.md  resampling-design.md  session-context-2026-03-30.md  webgl-port-plan.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
test/: Makefile  afsk_results_allbands.txt  afsk_results_post_ui.txt  analyze_spectrum.py  bench_dsp_pipeline.c  bench_fft.c  diag_audio.py  direct_936MHz_reference.iq  direct_936MHz_reference_profile.json  dtmf_results_allbands.txt  dtmf_results_bands.txt  fm_player.html  fm_rx_stream.py  fm_tx_pluto.py  host_dsp_reference.py  run_all_tests.sh  test_adsb_decode  test_adsb_decode.c  test_afsk_loopback.py  test_ais_decode  test_ais_decode.c  test_aprs_decode  test_aprs_decode.c  test_audio_ws.py  test_browser_audio.py  test_cell_decode  test_cell_decode.c  test_cell_scanner_live.py  test_dsp_edge_cases.c  test_dsp_kernels.c  test_dtmf_loopback.py  test_fm_demod.c  test_fm_stereo.c  test_phase4.c  test_pipeline_e2e.c  test_rds_loopback.py  test_stress.py  test_ws_protocols.py  test_wspr_ft8_decode  test_wspr_ft8_decode.c  (+2 more)
tools/: build-web.sh  pluto_fm_stereo_rds_tx.py  rtltcp_fm_client.py  rtludp_fm_client.py  soapysdr_fm_client.py  spyserver_fm_client.py  test_all_protocols.py  udp2tcp_bridge  udp2tcp_bridge.c  (+2 more)
(+123 files in other folders)
